[tool.poetry]
name = "digdaglog2sql"
version = "0.0.2"
description = "Extract SQLs from digdag log"
license = "Apache-2.0"
readme = "README.md"
authors = ["Aki Ariga <chezou@gmail.com>"]
maintainers = ["Aki Ariga <chezou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
taskipy = "^1.10.1"
click = "^8.1.3"
tdworkflow = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mypy = "^0.950"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
importlib-metadata = {version = ">=1.6.0", python = "<3.8"}

[tool.poetry.scripts]
digdaglog2sql = "digdaglog2sql.cli:run"

[tool.taskipy.tasks]
test = { cmd = "pytest tests", help = "runs all unit tests" }
pr_test = "task lint"
fmt = { cmd = "black tests digdaglog2sql && isort digdaglog2sql tests", help = "format code" }
lint = { cmd = "task lint_black && task lint_flake8 && task lint_isort && task lint_mypy", help = "exec lint" }
lint_flake8 = "flake8 --max-line-length=88 tests digdaglog2sql"
lint_mypy = "mypy tests digdaglog2sql"
lint_black = "black --check tests digdaglog2sql"
lint_isort = "isort digdaglog2sql tests --check-only"

[[tool.mypy.overrides]]
module = ["tdworkflow"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
